--- a/lawProject-Vue/package.json
+++ b/lawProject-Vue/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "jspdf": "^2.5.1",
     "vue": "^2.6.14",
+    "vue-cookies": "^1.8.2",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
