--- a/lawProject-node/package.json
+++ b/lawProject-node/package.json
@@ -9,6 +9,10 @@
   "author": "Ron De Man",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.1",
+    "cookie-session": "^2.0.0",
+    "express": "^4.18.2",
+    "passport": "^0.5.3",
+    "passport-local": "^1.0.0"
   }
 }
