--- a/lawProject-node/package.json
+++ b/lawProject-node/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "cookie-session": "^2.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mysql2": "^3.1.2",
     "passport": "^0.5.3",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7"
   }
 }
