changed ports and made index into app.js

--- a/lawProject-Vue/.env
+++ b/lawProject-Vue/.env
@@ -1,1 +1,2 @@
-VUE_APP_DATA_SERVICE_URL = http://localhost:3000
+VUE_APP_DATA_SERVICE_URL = http://localhost:80
+# VUE_APP_DATA_SERVICE_URL = http://lawproject.ben-israel.com:3000/
