--- a/lawProject-node/.env
+++ b/lawProject-node/.env
@@ -3,7 +3,7 @@ DATABASE_HOST=mysql.ron.ben-israel.com
 DATABASE_USER=rondeman
 DATABASE_NAME=lawprojectdb
 DATABASE_PASSWORD=healthycan
-AWSDB_HOST=lawproject.cvjuc6shp1qa.eu-west-3.rds.amazonaws.com
+AWSDB_HOST=law-project.cvjuc6shp1qa.eu-west-3.rds.amazonaws.com
 AWSDB_USER=admin
-AWSDB_NAME=
+AWSDB_NAME=ebdb
 AWSDB_PASSWORD=asdasd123
