--- a/lawProject-node/.gitignore
+++ b/lawProject-node/.gitignore
@@ -1,3 +1,9 @@
+# package directories
+node_modules
+jspm_packages
+
+# Serverless directories
+.serverless
 node_modules/
 /dist/
 
@@ -5,3 +11,4 @@ node_modules/
 # .env
 .env.local
 .env.*.local
+%.zip
