--- a/lawProject-Vue/package.json
+++ b/lawProject-Vue/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-components": "^1.9.40",
+    "aws-amplify": "^5.0.19",
     "axios": "^1.3.0",
     "core-js": "^3.8.3",
     "jspdf": "^2.5.1",
